# demo_robot

./: CMakeLists.txt  README.md  package.xml
config/: control.yaml  map_server_params.yaml  mapper_params_online_async.yaml  nav2_params.yaml  twist_mux.yaml
description/: camera.xacro  imu.xacro  lidar.xacro  robot.urdf.xacro  robot_body.xacro  ros2_control.xacro
launch/: sim.launch.py
maps/: custommap.pgm  custommap.yaml  new_map.pgm  new_map.yaml  office_map.pgm  office_map.yaml
scripts/: image_obstacle_stopping.py  lidar_based_stopping.py  map_manager.py
worlds/: customworld.sdf
